# ModularEvo

./: CMakeLists.txt  ExecuteTest.py  GUIDE.txt  ModularEvoManager.py  README.md  multipleInstanceOpener  requirements.txt  test.py
models/: spider.world  spider_noslope.world  spider_slope.world
models/Spider/: model.config  robot.sdf
models/ground_plane_20degreeslope/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/ground_plane_noSlope/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
py3gazebo/pygazebo/: pygazebo.py
py3gazebo/pygazebo/msg/v9/: imu_pb2.py  joint_cmd_pb2.py  packet_pb2.py  pose_pb2.py  poses_stamped_pb2.py  publishers_pb2.py  surface_pb2.py  wrench_pb2.py
src/: Brain.h  CPG_NEAT_HYPERNEAT_Brain.cpp  CPG_NEAT_HYPERNEAT_Brain.h  JointPositionMotor.cpp  JointPositionMotor.h  Learner_NEAT_HyperNEAT.cpp  Learner_NEAT_HyperNEAT.h  NeuralNetwork.cpp  NeuralNetwork.h  Oscillator.cpp  Oscillator.h  RobotManager.cc  RobotManager.h  WorldController.cpp  WorldController.h  utils.cpp  utils.h
